Modularity_For_Configurations

--- a/src/API/EventZen.Api/EventZen.Api.csproj
+++ b/src/API/EventZen.Api/EventZen.Api.csproj
@@ -24,4 +24,17 @@
     <ProjectReference Include="..\..\Modules\Events\EventZen.Modules.Events.Infrastructure\EventZen.Modules.Events.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="moduels.events.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="moduels.events.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
