--- a/src/API/EventZen.Api/appsettings.Development.json
+++ b/src/API/EventZen.Api/appsettings.Development.json
@@ -1,5 +1,28 @@
 {
   "ConnectionStrings": {
     "Database": "Host=eventzen.database;Port=5432;Database=eventzen;Username=postgres;Password=postgres;Include Error Detail=true"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://eventzen.seq:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "EventZen.Api"
+    }
   }
 }
