--- a/src/API/EventZen.Api/appsettings.Development.json
+++ b/src/API/EventZen.Api/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=eventzen.database;Port=5432;Database=eventzen;Username=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Host=eventzen.database;Port=5432;Database=eventzen;Username=postgres;Password=postgres;Include Error Detail=true",
+    "Redis": "eventzen.redis:6379"
   },
   "Serilog": {
     "Using": [
