--- a/src/Modules/Events/EventZen.Modules.Events.Presentation/EventZen.Modules.Events.Presentation.csproj
+++ b/src/Modules/Events/EventZen.Modules.Events.Presentation/EventZen.Modules.Events.Presentation.csproj
@@ -1,11 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\EventZen.Shared.Presentation\EventZen.Shared.Presentation.csproj" />
     <ProjectReference Include="..\EventZen.Modules.Events.Application\EventZen.Modules.Events.Application.csproj" />
   </ItemGroup>
-	
 
 </Project>
