--- a/src/Modules/Users/EventZen.Modules.Users.Application/EventZen.Modules.Users.Application.csproj
+++ b/src/Modules/Users/EventZen.Modules.Users.Application/EventZen.Modules.Users.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\EventZen.Modules.Users.IntegrationEvents\EventZen.Modules.Users.IntegrationEvents.csproj" />
     <ProjectReference Include="..\..\..\Shared\EventZen.Shared.Application\EventZen.Shared.Application.csproj" />
     <ProjectReference Include="..\EventZen.Modules.Users.Domain\EventZen.Modules.Users.Domain.csproj" />
   </ItemGroup>
