--- a/src/API/EventZen.Api/appsettings.Development.json
+++ b/src/API/EventZen.Api/appsettings.Development.json
@@ -3,6 +3,18 @@
     "Database": "Host=eventzen.database;Port=5432;Database=eventzen;Username=postgres;Password=postgres;Include Error Detail=true",
     "Redis": "eventzen.redis:6379"
   },
+  "Authentication": {
+    "Audience": "account",
+    "TokenValidationParameters": {
+      // internal and external issuers inside or outside of docker container
+      "ValidIssuers": [ "http://eventzen.identity:8080/realms/eventzen", "http://localhost:18080/realms/eventzen" ]
+    },
+    "MetadataAddress": "http://eventzen.identity:8080/realms/eventzen/.well-known/openid-configuration",
+    "RequireHttpsMetadata": false
+  },
+  "KeyCloak": {
+    "HealthUrl": "http://eventzen.identity:8080/health/"
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
