--- a/src/API/EventZen.Api/appsettings.json
+++ b/src/API/EventZen.Api/appsettings.json
@@ -3,7 +3,18 @@
     "Database": "",
     "Redis": ""
   },
-  "AllowedHosts": "*", 
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Audience": "",
+    "TokenValidationParameters": {
+      "ValidIssuers": []
+    },
+    "MetadataAddress": "",
+    "RequireHttpsMetadata": false
+  },
+  "KeyCloak": {
+    "HealthUrl": ""
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
