--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,5 +38,18 @@ services:
     restart: always
     ports:
       - 6379:6379
+  eventZen.identity:
+    image: quay.io/keycloak/keycloak:latest
+    container_name: EventZen.Identity
+    command: start-dev --import-realm
+    environment:
+      - KC_HEALTH_ENABLED=true
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+    volumes:
+      - ./.containers/identity:/opt/keycloak/data
+      - ./.files:/opt/keycloak/data/import
+    ports:
+      - 18080:8080
 
 
